Support automatic token associations (#2478)
- ingest the automatic token associations list in transaction record
- support new field max_automatic_token_associations for crypto account in crypto create and crypto update transactions
- update accounts rest api to show max_automatic_token_associations
- update token account query in tokens rest api
- fix incorrect token account association in SqlEntityListener and token account upsert
- insert-only token account association ingestion
